[gd_scene load_steps=3 format=3 uid="uid://qppc6sbc1cn0"]

[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://theme.tres" id="1"]
[ext_resource type="Script" path="res://src/screens/create-manager/CreateManager.gd" id="2"]

[node name="CreateManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.432
anchor_top = 0.231
anchor_right = 0.432
anchor_bottom = 0.231
offset_left = -73.96
offset_top = -13.32
offset_right = 74.04
offset_bottom = 11.68
theme = ExtResource("1")
text = "CREATE_MANAGER"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.0
offset_top = -64.0
offset_right = 169.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="NameLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "NAME"

[node name="Name" type="LineEdit" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SurNameLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "SURNAME"

[node name="SurName" type="LineEdit" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NatLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "NATIONALITY"

[node name="Nat" type="OptionButton" parent="GridContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="."]
layout_mode = 0
offset_left = 750.0
offset_top = 540.0
offset_right = 853.0
offset_bottom = 562.0
text = "CONTINUE"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 470.0
offset_top = 538.0
offset_right = 533.0
offset_bottom = 560.0
text = "BACK"

[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
